welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:12: error: not found: value ligne
		if (ligne<3) {
                    ^